fix: question mark not showing correctly

--- a/buatkim/styles.css
+++ b/buatkim/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Marsyal Hand", cursive !important;
+  font-family: "Marsyal Hand", "Gochi Hand", cursive !important;
 }
 .smerch {
   background-image: url(assets/stroke.png);
